[package]
name = "token-authn-envoy-filter"
version = "0.1.0"
authors = ["Tomas Basham <tomasbasham@gmail.com>"]
edition = "2018"

[lib]
name = "token_authn"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
log = "0.4"
proxy-wasm = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
